# MentorAI

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: next.config.ts  package.json
apps/web/public/: mentorai-app-icon.ico.bak
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: MentorWorkspaceLayout.tsx
apps/web/src/lib/: api-config.ts  supabase.ts
apps/web/src/store/: auth-store.ts
infrastructure/docker/: Dockerfile.api  Dockerfile.web  docker-compose.dev.yml  start-dev.sh
scripts/: test_endpoints.py  test_jwks.py
services/api/: alembic.ini  check_pg_messages.py  requirements.txt  test_get_session_api.py
services/api/app/: __init__.py  main.py
services/api/app/common/: constants.py  exceptions.py  pagination.py  responses.py
services/api/app/core/: __init__.py  config.py  logging.py
services/api/app/database/: base.py  session.py
services/api/app/datasets/: __init__.py
services/api/app/intelligence/: __init__.py  format_selector.py  intent_classifier.py  output_processor.py  response_planner.py  suggestion_generator.py
services/api/app/llm/: __init__.py  exceptions.py
services/api/app/middleware/: rate_limit.py
services/api/app/models/: __init__.py  base.py  chat.py  collection.py  document.py  document_chunk.py  note.py  profile.py  role_usage.py  usage.py  user.py  user_preferences.py  user_settings.py  workspace_settings.py
services/api/app/modules/: __init__.py
services/api/app/rag/: __init__.py
services/worker/: main.py
(+231 files in other folders)
