[project]
name = "mentorai-os"
version = "0.1.0"
description = "Production-Grade AI Learning & Productivity Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    "langgraph>=0.0.26",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "redis>=5.0.0",
    "celery>=5.3.6",
    "pydantic>=2.6.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
    "supabase>=2.3.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "pydantic-settings>=2.14.1",
    "email-validator>=2.3.0",
    "aiosqlite>=0.22.1",
]

[tool.pyright]
extraPaths = ["services/api"]
